# whist-client

./: Cargo.toml
src/: main.rs  packet.rs
src/logic/: deck.rs  error.rs  mod.rs  player.rs  table.rs
