[package]
name = "whist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35.2"
strum = "0.24"
strum_macros = "0.24"
rand = "0.8.5"
thiserror = "1.0.38"
log = "0.4.17"
env_logger = "0.10.0"
lazy_static = "1.4.0"
whist_common = { path = "../WhistCommon", version = "0.1.0" }
